2000-09-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread.h: Declare pthread_attr_getstack and
	pthread_attr_setstack.
	* Versions [libpthread] (GLIBC_2.2): Export pthread_attr_getstack and
	pthread_attr_setstack.
	* attr.c (pthread_attr_getstack, pthread_attr_setstack): New functions.

2000-09-05  Ulrich Drepper  <drepper@redhat.com>

	* Examples/ex14.c: New file.
	* Makefile (tests): Add ex14.

	* mutex.c (__pthread_mutex_unlock): Correct test for already unlocked
	mutex.  Patch by dtc@cmucl.cons.org.

	* ecmutex.c: New file.
	* Makefile (tests): Add ecmutex.

2000-09-04  H.J. Lu  <hjl@gnu.org>

	* attr.c (__pthread_attr_setguardsize): Use page_roundup
	instead of roundup to round up to the page size.

2000-09-03  Mark Kettenis  <kettenis@gnu.org>

	* manager.c (pthread_exited): Correctly report event as TD_REAP
	instead of TD_DEATH.  Fix comments.

2000-09-03  Ulrich Drepper  <drepper@redhat.com>

	* spinlock.h (testandset): Add cast to avoid warning.
	Patch by Franz Sirl <Franz.Sirl-kernel@lauterbach.com>.

2000-09-02  Andreas Jaeger  <aj@suse.de>

	* sysdeps/pthread/timer_routines.c: Include stdlib.h for abort
	prototype.

2000-09-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/bits/stdio-lock.h (_IO_cleanup_region_start):
	Fix typo in last patch (_mode -> _flags).

	* sysdeps/pthread/bits/stdio-lock.h (_IO_cleanup_region_start):
	Provide definition which respects _IO_USER_LOCK flag.

2000-08-30  Ulrich Drepper  <drepper@redhat.com>

	* manager.c (pthread_allocate_stack): Clear descriptor only if not
	mmaped.

2000-08-25  Ulrich Drepper  <drepper@redhat.com>

	* Makefile: Add rules to build and run unload.
	* unload.c: New file.

	* pthread.c (pthread_exit_process): Move thread_self use inside `if'.

	* sysdeps/pthread/pthread.h
	(PTHREAD_ADAPTIVE_MUTEX_INITIALIZER_NP): Defined.
	(PTHREAD_ERRORCHECK_MUTEX_INITIALIZER_NP: Defined.

2000-08-24  Andreas Jaeger  <aj@suse.de>
